src/snapshots/interpreter__parser__tests__known_macros@len_macro-2.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\arraycolsep2.5\\mac[not part]`"
---
stmts:
  - KnownMacro:
      name: arraycolsep
      args:
        - Number: "2.5"
        - Macro:
            name: mac
      is_alt: false
  - Text: "[not part]"
errors: []

