src/snapshots/interpreter__parser__tests__known_macros@m.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\usepackage{pkg}[not part]`"
---
stmts:
  - KnownMacro:
      name: usepackage
      args:
        - Block:
            - Text: pkg
      is_alt: false
  - SquareBlock:
      - Text: not
      - Token: Space
      - Text: part
errors: []

